--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "sonner": "^1.4.41"
   },
   "devDependencies": {
